tests/pyconverter-test/errors/global_no_binding.py
def whatever():
    global a # 9521
    if True:
        a = 2
    else:
        a = 3